bootstrap modal shifting problem on controlpanel fixed by removing overflow-y scroll from controlpanel.php

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-html {
-	overflow-y: scroll;
-}
 h1 {
 	text-align: center;
 	font-weight: bold;
